# Group-Chat-Room-Master

./: CMakeLists.txt  README.md  zxczxc  zxczxc.pub
include/: public.hpp
include/server/: ChatServer.hpp  chatservice.hpp
include/server/db/: db.h
include/server/model/: friendmodel.hpp  group.hpp  offlinemessage.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessage.cpp  usermodel.cpp
src/server/redis/: redis.cpp
test/: clientmain.cpp  servermain.cpp
